# Playground

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  python_asyncio.py
cat-timer-extension/: background.js  cat.css  content.js  manifest.json  popup.css  popup.html  popup.js
chapter1/: FirstAgentTest.ipynb  FirstAgentTest.py
docs/superpowers/plans/: 2026-04-23-promptcoder-enhancement-plan.md  2026-05-02-cat-timer-extension-plan.md
docs/superpowers/specs/: 2026-04-23-promptcoder-enhancement-design.md  2026-05-02-cat-timer-extension-design.md
src/: config.py  main.py
src/agent/: __init__.py  assistant.py  memory.py  parser.py  runner.py
src/api/: __init__.py  router.py  schemas.py
src/frontend/: app.py  main.py
src/llm/: __init__.py  client.py
src/tools/: __init__.py  attraction.py  ticket.py  weather.py
